<resources>
    <string name="app_name">Red Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="invertabrates">Omirtqasizlar</string>
    <string name="menu_fishes">Baliqlar</string>
    <string name="menu_reptiles">Jerbawirlawshilar</string>
    <string name="menu_birds">Quslar</string>
    <string name="menu_mammals">Sutemiziwshiler</string>
    <string name="status">Status</string>
    <string name="propagation">Propagation</string>
    <string name="habitat">Habitat</string>
    <string name="quantity">Quantity</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="limiting_factors">Limiting Factors</string>
    <string name="breeding">Breeding</string>
    <string name="security">Security</string>
    <string name="title_activity_fovarites">FovaritesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="selected">Saylandilar</string>
</resources>